# SLAM-Seq-Aligner

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cmakebak/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
src/: indexer.cpp  indexerlib.h  searcher.cpp  searcherlib.h
tmp/: krb5-1.13.1.tar.gz.asc
tmp/curl-7.24.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
tmp/curl-7.24.0/docs/: Makefile
tmp/curl-7.24.0/docs/examples/: Makefile
tmp/curl-7.24.0/docs/libcurl/: Makefile
tmp/curl-7.24.0/include/: Makefile
tmp/curl-7.24.0/include/curl/: Makefile
tmp/curl-7.24.0/lib/: Makefile  curl_config.h  libcurl.la  libcurl.lai
tmp/curl-7.24.0/lib/.deps/: asyn-ares.Plo  asyn-thread.Plo  axtls.Plo  base64.Plo  connect.Plo  content_encoding.Plo  cookie.Plo  curl_addrinfo.Plo  curl_fnmatch.Plo  curl_gethostname.Plo  curl_gssapi.Plo  curl_memrchr.Plo  curl_ntlm.Plo  curl_ntlm_core.Plo  curl_ntlm_msgs.Plo  curl_ntlm_wb.Plo  curl_rand.Plo  curl_rtmp.Plo  curl_sspi.Plo  curl_threads.Plo  cyassl.Plo  dict.Plo  easy.Plo  escape.Plo  file.Plo  fileinfo.Plo  formdata.Plo  ftp.Plo  ftplistparser.Plo  getenv.Plo  getinfo.Plo  gopher.Plo  gtls.Plo  hash.Plo  hmac.Plo  hostasyn.Plo  hostip.Plo  hostip4.Plo  hostip6.Plo  hostsyn.Plo  (+60 more)
tmp/curl-7.24.0/lib/.libs/: libcurl.lai
tmp/curl-7.24.0/src/: Makefile  curl  curl_config.h
tmp/curl-7.24.0/src/.deps/: hugehelp.Po  nonblock.Po  rawstr.Po  strdup.Po  strtoofft.Po  tool_binmode.Po  tool_bname.Po  tool_cb_dbg.Po  tool_cb_hdr.Po  tool_cb_prg.Po  tool_cb_rea.Po  tool_cb_see.Po  tool_cb_skt.Po  tool_cb_wrt.Po  tool_cfgable.Po  tool_convert.Po  tool_dirhie.Po  tool_doswin.Po  tool_easysrc.Po  tool_formparse.Po  tool_getparam.Po  tool_getpass.Po  tool_help.Po  tool_helpers.Po  tool_homedir.Po  tool_libinfo.Po  tool_main.Po  tool_mfiles.Po  tool_msgs.Po  tool_operate.Po  tool_operhlp.Po  (+11 more)
tmp/curl-7.24.0/tests/: Makefile
tmp/krb5-1.13.1/src/: Makefile  config.status
(+145 files in other folders)
